# Spaghetti-Architect

./: .gitignore  .mailmap  .zenodo.json  CITATION.cff  CONTRIBUTING.md  DATASHEET.md  README.md  REQUIREMENTS.md  architecture.md  codemeta.json  conftest.py  croissant.json  pyproject.toml  requirements.txt
.claude/skills/spaghetti-architect/: SKILL.md
.github/workflows/: ci.yml
archived/benchmark-paper/: benchmark.tex
archived/msr-toolshowcase/: README.md
bench/: README.md  __init__.py  aibench_workflow.md  analysis.py  anchor.py  annotation_ablation.py  config.example.json  dataset.py  g3_analysis.py  grade.py  ladder_analysis.py  models.py  prompts.py  run_bench.py  tasks.py  uniform_lane.py
bench/data/: CANARY.txt  manifest.json
bench/data/dev/: agg_stats_W12.json  agg_stats_W128.json  agg_stats_W16.json  agg_stats_W160.json  agg_stats_W16_v0.json  agg_stats_W16_v1.json  agg_stats_W16_v2.json  agg_stats_W16_v3.json  agg_stats_W16_v4.json  agg_stats_W24.json  agg_stats_W32.json  agg_stats_W32_v0.json  agg_stats_W32_v1.json  agg_stats_W32_v2.json  agg_stats_W32_v3.json  agg_stats_W32_v4.json  agg_stats_W48.json  agg_stats_W64.json  agg_stats_W8.json  agg_stats_W96.json  allowlist_L12.json  allowlist_L128.json  allowlist_L16.json  allowlist_L160.json  allowlist_L192.json  allowlist_L24.json  allowlist_L256.json  allowlist_L32.json  allowlist_L320.json  allowlist_L32_v0.json  allowlist_L32_v1.json  allowlist_L32_v2.json  allowlist_L32_v3.json  allowlist_L32_v4.json  allowlist_L384.json  allowlist_L48.json  allowlist_L64.json  allowlist_L64_v0.json  allowlist_L64_v1.json  allowlist_L64_v2.json  (+60 more)
bench/paper/: benchmark.tex  refs.bib
config/: anti_patterns_db.json
eval/: README.md  __init__.py  gen_samples.py  metrics.py
examples/: aggregate.json  analytics.json  combined.json  conditional_select.json  key_value_lookup.json  membership_check.json
paper/: README.md  dmlr.tex  refs.bib  spaghetti_architect.tex
paper/sections/: baselines.tex  datasheet.tex  intro.tex  limitations.tex  related.tex  resource.tex  validity.tex
scripts/: anonymize_snapshot.py
src/: __init__.py  emitter.py  engine.py  ir_models.py  main.py
src/generators/: __init__.py  base.py  cpp_gen.py  go_gen.py  java_gen.py  javascript_gen.py  python_gen.py
src/nodes/: __init__.py  parser.py  planner.py  safety.py  validator.py
tests/: test_equivalency.py  test_golden.py  test_parser.py  test_profiles.py
tests/golden/cpp/: aggregate.cpp  analytics.cpp  combined.cpp  conditional_select.cpp  key_value_lookup.cpp  membership_check.cpp
tests/golden/go/: aggregate.go  analytics.go  combined.go  conditional_select.go  key_value_lookup.go  membership_check.go
tests/golden/java/: aggregate.java  analytics.java  combined.java  conditional_select.java  key_value_lookup.java  membership_check.java
tests/golden/javascript/: aggregate.js  analytics.js  combined.js  conditional_select.js  key_value_lookup.js  membership_check.js
tests/golden/python/: aggregate.py  analytics.py  combined.py  conditional_select.py  key_value_lookup.py  membership_check.py
